fixed issues with caching and implemented an index-based cache using Lucene